--- a/01-hello-quick/src/main/resources/application.yml
+++ b/01-hello-quick/src/main/resources/application.yml
@@ -1,2 +1,26 @@
 server:
-  port: 8888
+  port: 8001
+
+person:
+#  lastName: zhangsan
+#  配置文件优先级最高
+  age: 18
+  boss: false
+  birth: 2017/12/12
+  maps: {k1: v1 ,k2 : v2}
+  lists:
+    - lisi
+    - zhaoliu
+  dog:
+    name: ${person.last-name}_小狗
+    age: 2
+  last-name: zhangsan${random.uuid}
+
+# 能配置的属性都来源于这个功能的 properties 类
+spring:
+  http:
+    encoding:
+      charset: utf-8
+
+# 开启 SpringBoot 的 debug  查看自动配置报告
+debug: true
