--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <name>${project.artifactId}</name>
     <modules>
         <module>01-hello-quick</module>
+        <module>02-logging</module>
     </modules>
 
     <properties>
